# daedalus-deploy

./: .gitignore  README.md  daedalus  pyproject.toml  requirements.txt
.github/workflows/: build_proxy.yml  pytest.yml  test.yml
config/: daedalus.yml  fakeproxy.yml  noproxy.yml  production.yml  staging.yml
proxy/: Dockerfile  nginx.conf.template
proxy/docker/: build  common  push  push-branch-tag  test
src/: daedalus_cli.py  daedalus_config.py  daedalus_constellation.py  daedalus_deploy.py
src/daedalus_deploy/: __about__.py  __init__.py  cli.py  config.py  daedalus_constellation.py
test/: test_config.py  test_integration.py
tests/: test_config.py  test_integration.py
